--- a/style.css
+++ b/style.css
@@ -111,10 +111,57 @@ form fieldset legend {
     width: 100%;
 }
 
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+
+    gap: 8px;
+    
+}
+
+.input-wrapper label {
+    
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #4E4958;
+    
+}
+
+.input-wrapper label span {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+
+    color: #C1BCCC;
+
+}
+
+.input-wrapper input {
+
+    height: 56px;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+
+    text-align: center;
+
+    background: #FAFAFC;
+}
 
 
+.col-2 {
+    display: flex;
+    gap: 22px;
 
+    
+}
 
+.col-2 > div{
+
+    width: 50%;
+}
 
 
 
