--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 
-
-    
-    
-
    /* font-family: 'Poppins', sans-serif;
     font-family: 'Staatliches', cursive;*/
 }
@@ -102,13 +98,23 @@ form fieldset legend {
     line-height: 34px;
     color: #535971;
 
-    margin-bottom: 36px;
+    
     padding-bottom: 8px;
     border-bottom: 1px solid #E6E6F0;
 
     
 
     width: 100%;
+}
+
+.fieldset-wrapper {
+    
+    margin-top: 36px;
+}
+
+.fieldset-wrapper-mentor{
+    
+    margin-top: 32px;
 }
 
 .input-wrapper {
@@ -121,7 +127,25 @@ form fieldset legend {
     
 }
 
-.input-wrapper label {
+.input-wrapper-mentor {
+    display: flex;
+    flex-direction: column;
+
+    gap: 8px;
+
+    
+    
+}
+
+.input-wrapper-date {
+    display: flex;
+    flex-direction: column;
+
+    gap: 8px;
+
+}
+
+.input-wrapper label, .input-wrapper-mentor label, .input-wrapper-date label {
     
     font-family: 'Poppins';
     font-weight: 400;
@@ -131,7 +155,7 @@ form fieldset legend {
     
 }
 
-.input-wrapper label span {
+.input-wrapper label span, .input-wrapper-mentor label span, .input-wrapper-date label span {
     font-family: 'Poppins';
     font-weight: 400;
     font-size: 12px;
@@ -141,7 +165,7 @@ form fieldset legend {
 
 }
 
-.input-wrapper input {
+.input-wrapper input, .input-wrapper-mentor input, .input-wrapper-date input {
 
     height: 56px;
     border: 1px solid #E6E6F0;
@@ -162,9 +186,7 @@ form fieldset legend {
 .col-2 {
     display: flex;
     gap: 22px;
-    margin-top: -16px;
 
-    
 }
 
 .col-2 > div{
@@ -197,6 +219,10 @@ fieldset:nth-child(2) {
     display: flex;
     gap: 32px;
     width: 100%;
+
+    height: 100%;
+
+    
     
 }
 
@@ -219,10 +245,77 @@ fieldset:nth-child(2) {
 }
 
 
-.col-3 .input-wrapper input{
+.col-3 .input-wrapper-date input{
 
 width: 140px;
 
 
 }
 
+
+.fieldset-wrapper-first-mentory h2 {
+    font-family: 'Staatliches';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+
+
+    color: #535971;
+
+    
+
+    margin: 32px 0 8px;
+
+}
+
+
+.fieldset-wrapper-second-mentory h2 {
+    font-family: 'Staatliches';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 34px;
+
+
+    color: #535971;
+
+    
+
+    margin: 16px 0 8px;
+
+}
+
+footer {
+    
+    height: 152px;
+
+    margin: 0 auto 366px;
+
+    background: #535971;
+    border-radius: 0px 0px 20px 20px;
+}
+
+footer input {
+
+    font-family: 'Staatliches';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+
+    color: #FFFFFF;
+
+    background: #FF5374;
+    border: none;
+    border-radius: 20px;
+
+    
+    padding: 15px 40px;
+    margin: 45px 71px;
+    width: 608px;
+    
+    
+    
+}
+
+footer input:hover {
+    background: #dd3355;
+}
