--- a/style.css
+++ b/style.css
@@ -29,9 +29,6 @@ body::before {
 
 }
 
-.page {
-    
-}
 
 .wrapper {
 
@@ -145,7 +142,7 @@ form fieldset legend {
 
 }
 
-.input-wrapper label, .input-wrapper-mentor label, .input-wrapper-date label {
+fieldset label {
     
     font-family: 'Poppins';
     font-weight: 400;
@@ -155,7 +152,7 @@ form fieldset legend {
     
 }
 
-.input-wrapper label span, .input-wrapper-mentor label span, .input-wrapper-date label span {
+fieldset span {
     font-family: 'Poppins';
     font-weight: 400;
     font-size: 12px;
@@ -165,7 +162,7 @@ form fieldset legend {
 
 }
 
-.input-wrapper input, .input-wrapper-mentor input, .input-wrapper-date input {
+fieldset input {
 
     height: 56px;
     border: 1px solid #E6E6F0;
@@ -318,4 +315,10 @@ footer input {
 
 footer input:hover {
     background: #dd3355;
+    
 }
+
+input:invalid {
+    outline: #dd3355 1px solid;
+}
+
